# phil-noire

./: Cargo.toml
assets/: desk.gltf  office.world  phishhead.gltf  plane.gltf
assets/phishhead/: model.gltf
src/: bindings.rs  camera.rs  differed.rs  editor.rs  gltf.rs  instance.rs  main.rs  mesh.rs  node.rs  renderer.rs  transform.rs  ui.rs  ui_pipelines.rs  world.rs
src/shaders/: bloom.wgsl  combine.wgsl  light.wgsl  separate.wgsl  shadow.wgsl  ui.wgsl
